# patch-docker-image

./: .gitignore  Dockerfile.test  EULA.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  action.yml  patch_image.py  pyproject.toml
.github/actions/patch-docker-image/: README.md  action.yml
.github/workflows/: ci.yml  e2e-live-smoke.yml  release-action-tags.yml  test-public-marketplace-action.yml
scripts/: build_linux_binary.sh  gen_pr_body.py
src/docker_vuln_patcher/: __init__.py  __main__.py  cli.py
templates/github-actions/: consume-composite-action.yml  patch-image.yml  test-consumer-workflow.yml
tests/: test_cli.py
vuln_reports/: patch_plan_golang_1.14.4-stretch.json  patch_plan_node_14-alpine.json  patch_plan_node_24-slim.json  sample_gitlab.json  scout_golang_1.14.4-stretch.json  scout_golang_1.14.4-stretch_gitlab.json  scout_node_14-alpine.json  scout_node_24-slim.json
